k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: connorfleming.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-website-service
                port:
                  number: 80
  tls:
    - hosts:
        - connorfleming.io
      secretName: connorfleming-tls
